# i2o

./: LICENSE  README.md  makefile
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: cbor2json.cxx  json2cbor.cxx  json2json.cxx  utility.hxx
test/: CMakeLists.txt  makefile  round-trip.sh
